HISTORY.txt

New in 0.8:
- implemented check for NewDOS/80 PDRIVE data.
- fixed a bug corrupting the sector address in some cases.
- generalized the image index parsing, removing a lot of redundant code in main.
- split the main file according to the perceived layers of the program. More is 
  expected in later versions.
- Added some more boot sector signatures.
- Shuffled the log level if some messages. Still more work to do.

New in 0.7:
- implemented technical GAT, HIT and directory entry listings (-d option). Just for 
  the basic SD, SS TRSDOS 2.3 compatible disks.
- implemented a boot sector signature check, which also extracts the directory track.
- unified the image indexing, making sector access format agnostic.
- added flag to ignore second side (very useful for double sided disks/images that 
  have been reformatted single sided).
- added a struct containing the disk geometry, based on the imageIndex. 

New in 0.6:
- cleaned up code
- replaced raw hex dumps by neat hex & ascii
- structured the check code and extracted the boot sector check

New in 0.5:
- slightly improved help.
- replaced fixed DAM location by a dynamic search

New in 0.4:
- completed DMK parsing.

New in 0.3:
- improved DMK parsing, but single byte sectors only.	   
	   
fjkraan@electrickery.nl, 2022-12-30